--- a/portfolio.html
+++ b/portfolio.html
@@ -34,18 +34,41 @@
 
        <div class="portfolio-item">
             <img class="portfolio-image" src="assets/img/pyschicgame.PNG">
+            <div class="portfolio-description">
+                <h4>Psychic Game</h4><p>
+                    A Javascript based game where the computer generates a random letter and the player has to try and guess the letter.
+                    This script shows Javascript basics and uses a for loop and a Math.Random function. 
+                </p>    
+            </div>
             <a href="https://mattroger.github.io/psychic-game/"><h3 class="portfolio-text">Psychic Game</h3></a>
        </div>
        <div class="portfolio-item">
             <img class="portfolio-image" src="assets/img/crystalgame.png">
+            <div class="portfolio-description">
+                    <h4>Kalaxian Crystals</h4><p>
+                        A Javascript based game where the computer generates a random crystal value. The player must figure out how to reach
+                        the target number using four crystals with random values. 
+                    </p>    
+                </div>
             <a href="https://mattroger.github.io/crystalGuessGame/"><h3 class="portfolio-text">Kalaxian Crystals</h3></a>
        </div>
        <div class="portfolio-item">
             <img class="portfolio-image" src="assets/img/giphygen.PNG">
+            <div class="portfolio-description">
+                    <h4>7 Deadly Sins Giphy Generator</h4><p>
+                       Click on a button to generate 10 gifs from the giphy api using the button as a search term.
+                       Add a sin to the button bar!
+                    </p>    
+                </div>
        <a href="https://mattroger.github.io/giphyGen/"><h3 class="portfolio-text">Giphy Generator</h3></a>
        </div>
        <div class="portfolio-item">
             <img class="portfolio-image" src="assets/img/worldwatcher.PNG">
+            <div class="portfolio-description">
+                    <h4>The World Watcher</h4><p>
+                        A group project using multiple api's to create a country information search. Add a country and find the country's statics, weather, and news.  
+                    </p>    
+                </div>
        <a href="https://mattroger.github.io/project1/"><h3 class="portfolio-text">The World Watcher</h3></a>
        </div>
         
