added friend finder

--- a/portfolio.html
+++ b/portfolio.html
@@ -136,6 +136,18 @@
                     <h3 class="portfolio-text">Spoiler Alert</h3>
                 </a>
             </div>
+            <div class="portfolio-item">
+                <img class="portfolio-image" src="assets/img/friendfinder.PNG">
+                <div class="portfolio-description">
+                    <h4> Sci-Fi Friend Finder</h4>
+                    <p>
+                        A web app for finding your sci-fi companion. Using Node.js and Express.js
+                    </p>
+                </div>
+                <a href="https://evening-sea-45437.herokuapp.com">
+                    <h3 class="portfolio-text">Sci-fi Friend Finder</h3>
+                </a>
+            </div>
         </div> 
     </div>
     </section>
