--- a/toolbox.html
+++ b/toolbox.html
@@ -30,23 +30,30 @@
 
     <div class="main-wrapper">
         <section class="main-section">
-            <h2>About Matt</h2>
+            <h2>Matt's Tool Box</h2>
             <div class="inner-section about">
+                <div class="toolbar">
+                        <i class="fab fa-html5">HTML</i>
+                            <ul>
+                                <li>Standard HTML5 Formating</li>
+                                <li>Pug</li>
+                                <li>HandleBars</li>
+                            </ul>
+                        <i class="fab fa-css3-alt">CSS</i>
+                            <ul>
+                                <li>CSS</li>
+                            </ul>
+                        <i class="fab fa-css3-alt">Javascript</i>
+                            <ul>
+                                <li>Javascript Vanilla</li>
+                                <li>JQuerry</li>
+                            </ul>
+                        <i class="fab fa-node-js">Node</i>
+                        <i class="fab fa-npm">NPMS</i>
+                            <ul>
+                                <li>Express</li>
+                            </ul>
 
-                <img src="assets/img/portfoliosm.jpg" class="profile-image" alt="Matt Roger">
-                <div class="about-text">
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac
-                        rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id
-                        arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur
-                        euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
-
-                    <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio.
-                        Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
-
-                    <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh
-                        tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-                        mus.</p>
                 </div>
 
             </div>
