added clicky game

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 
 <body>
     <header id="masthead">
-        <div class="container clearfix">
+        <div class="container">
             <div class="name-title">
                 <a href="index.html" id="logo" class="name">Matt Roger</a>
                 <a href="index.html" id="logo" class="jtitle">Web Developer</a>
@@ -146,6 +146,18 @@
                 </div>
                 <a href="https://evening-sea-45437.herokuapp.com">
                     <h3 class="portfolio-text">Sci-fi Friend Finder</h3>
+                </a>
+            </div>
+            <div class="portfolio-item">
+                <img class="portfolio-image" src="assets/img/clickygame.PNG">
+                <div class="portfolio-description">
+                    <h4>Colorado Wildlife Clicky Game</h4>
+                    <p>
+                        A memory games built with reach and styled components
+                    </p>
+                </div>
+                <a href="https://clickygame9999.herokuapp.com/">
+                    <h3 class="portfolio-text">Colorado Wildlife Clicky Game</h3>
                 </a>
             </div>
         </div> 
