--- a/portfolio.html
+++ b/portfolio.html
@@ -160,6 +160,18 @@
                     <h3 class="portfolio-text">Colorado Wildlife Clicky Game</h3>
                 </a>
             </div>
+            <div class="portfolio-item">
+                <img class="portfolio-image" src="assets/img/zombies.PNG">
+                <div class="portfolio-description">
+                    <h4>Zombies Need Brains</h4>
+                    <p>
+                        A educational game built with react
+                    </p>
+                </div>
+                <a href="https://clickygame9999.herokuapp.com/">
+                    <h3 class="portfolio-text">Zombies Need Brains</h3>
+                </a>
+            </div>
         </div> 
     </div>
     </section>
