--- a/contact.html
+++ b/contact.html
@@ -34,12 +34,15 @@
         <section class="main-section">
             <h2>Contact Matt</h2>
             <div class="inner-section contact">
-                <form>
+                <form
+                action="https://formspree.io/xoqjqqze"
+                method="POST"
+                >
                     <label for="fname">First Name</label>
-                    <input type="text" id="fname" name="firstName" placeholder="Enter your first name">
+                    <input type="text" id="fname" name="_replyto" placeholder="Enter your name">
 
-                    <label for="lname">Last Name</label>
-                    <input type="text" id="lname" name="lastName" placeholder="Enter your last name">
+                    <label for="email">Email</label>
+                    <input type="text" id="email" name="email" placeholder="Email">
 
                     <label for="message">Your Message</label>
                     <textarea id="message" name="subject" placeholder="Your message here..."></textarea>
