--- a/contact.html
+++ b/contact.html
@@ -38,11 +38,11 @@
                 action="https://formspree.io/xoqjqqze"
                 method="POST"
                 >
-                    <label for="fname">First Name</label>
-                    <input type="text" id="fname" name="_replyto" placeholder="Enter your name">
-
                     <label for="email">Email</label>
-                    <input type="text" id="email" name="email" placeholder="Email">
+                    <input type="text" id="email" name="_replyto" placeholder="Enter your Email">
+
+                    <label for="email">Name</label>
+                    <input type="text" id="email" name="name" placeholder="name">
 
                     <label for="message">Your Message</label>
                     <textarea id="message" name="subject" placeholder="Your message here..."></textarea>
