--- a/portfolio.html
+++ b/portfolio.html
@@ -111,71 +111,73 @@
                         <h3 class="portfolio-text">Star Wars Trivia</h3>
                     </a>
                 </div>
-           
-            <div class="portfolio-item">
-                <img class="portfolio-image" src="assets/img/burgerOrm.PNG">
-                <div class="portfolio-description">
-                    <h4>Burger ORM</h4>
-                    <p>
-                        an app that uses ORMs express and handlebars
-                    </p>
+
+                <div class="portfolio-item">
+                    <img class="portfolio-image" src="assets/img/burgerOrm.PNG">
+                    <div class="portfolio-description">
+                        <h4>Burger ORM</h4>
+                        <p>
+                            an app that uses ORMs express and handlebars
+                        </p>
+                    </div>
+                    <a href="https://shielded-spire-78466.herokuapp.com">
+                        <h3 class="portfolio-text">Burger Orm</h3>
+                    </a>
                 </div>
-                <a href="https://shielded-spire-78466.herokuapp.com">
-                    <h3 class="portfolio-text">Burger Orm</h3>
-                </a>
-            </div>
-            <div class="portfolio-item">
-                <img class="portfolio-image" src="assets/img/spoileralert.PNG">
-                <div class="portfolio-description">
-                    <h4>Spoiler Alert</h4>
-                    <p>
-                        A website for talking about spoilers with fellow fans. This website uses Pug, Express, Passport, and MySql.
-                    </p>
+                <div class="portfolio-item">
+                    <img class="portfolio-image" src="assets/img/spoileralert.PNG">
+                    <div class="portfolio-description">
+                        <h4>Spoiler Alert</h4>
+                        <p>
+                            A website for talking about spoilers with fellow fans. This website uses Pug, Express,
+                            Passport, and MySql.
+                        </p>
+                    </div>
+                    <a href="https://shrouded-eyrie-44738.herokuapp.com/">
+                        <h3 class="portfolio-text">Spoiler Alert</h3>
+                    </a>
                 </div>
-                <a href="https://shrouded-eyrie-44738.herokuapp.com/">
-                    <h3 class="portfolio-text">Spoiler Alert</h3>
-                </a>
-            </div>
-            <div class="portfolio-item">
-                <img class="portfolio-image" src="assets/img/friendfinder.PNG">
-                <div class="portfolio-description">
-                    <h4> Sci-Fi Friend Finder</h4>
-                    <p>
-                        A web app for finding your sci-fi companion. Using Node.js and Express.js
-                    </p>
+                <div class="portfolio-item">
+                    <img class="portfolio-image" src="assets/img/friendfinder.PNG">
+                    <div class="portfolio-description">
+                        <h4> Sci-Fi Friend Finder</h4>
+                        <p>
+                            A web app for finding your sci-fi companion. Using Node.js and Express.js
+                        </p>
+                    </div>
+                    <a href="https://evening-sea-45437.herokuapp.com">
+                        <h3 class="portfolio-text">Sci-fi Friend Finder</h3>
+                    </a>
                 </div>
-                <a href="https://evening-sea-45437.herokuapp.com">
-                    <h3 class="portfolio-text">Sci-fi Friend Finder</h3>
-                </a>
-            </div>
-            <div class="portfolio-item">
-                <img class="portfolio-image" src="assets/img/clickygame.PNG">
-                <div class="portfolio-description">
-                    <h4>Colorado Wildlife Clicky Game</h4>
-                    <p>
-                        A memory games built with reach and styled components
-                    </p>
+                <div class="portfolio-item">
+                    <img class="portfolio-image" src="assets/img/clickygame.PNG">
+                    <div class="portfolio-description">
+                        <h4>Colorado Wildlife Clicky Game</h4>
+                        <p>
+                            A memory games built with reach and styled components
+                        </p>
+                    </div>
+                    <a href="https://clickygame9999.herokuapp.com/">
+                        <h3 class="portfolio-text">Colorado Wildlife Clicky Game</h3>
+                    </a>
                 </div>
-                <a href="https://clickygame9999.herokuapp.com/">
-                    <h3 class="portfolio-text">Colorado Wildlife Clicky Game</h3>
-                </a>
-            </div>
-            <div class="portfolio-item">
-                <img class="portfolio-image" src="assets/img/zombies.PNG">
-                <div class="portfolio-description">
-                    <h4>Zombies Need Brains</h4>
-                    <p>
-                        A educational game built with react
-                    </p>
+                <div class="portfolio-item">
+                    <img class="portfolio-image" src="assets/img/zombies.PNG">
+                    <div class="portfolio-description">
+                        <h4>Zombies Need Brains</h4>
+                        <p>
+                            A educational game built with react
+                        </p>
+                    </div>
+                    <a href="https://clickygame9999.herokuapp.com/">
+                        <h3 class="portfolio-text">Zombies Need Brains</h3>
+                    </a>
                 </div>
-                <a href="https://clickygame9999.herokuapp.com/">
-                    <h3 class="portfolio-text">Zombies Need Brains</h3>
-                </a>
+
             </div>
-        </div> 
+        </section>
     </div>
-    </section>
-    </div>
+
 
 </body>
 <footer>
