tweeked intro added enter buttom

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,16 +13,20 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 </head>
+
 <body>
-    <div class="enterSite"></div>
+    <div class="enterSite">
+        <a href="about.html"> Enter Site</a>
+    </div>
     <div class="opening">
     </div>
     <div class="logo scale-out-center"></div>
     <section class="star-wars">
         <div class="crawl">
-            <div class="title"></div>                                      
+            <div class="title"></div>
         </div>
     </section>
- 
+
 </body>
+
 </html>
