added actual profile, added github and linked in links to footer, started mailchimp page

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/grid.css">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700|Permanent+Marker&display=swap"
         rel="stylesheet">
     <title>About Matt Roger</title>
@@ -36,17 +37,17 @@
                 <img src="assets/img/portfoliosm.jpg" class="profile-image" alt="Matt Roger">
                 <div class="about-text">
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac
-                        rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id
-                        arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur
-                        euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
+                    <p>A University of Denver full-stack coding Bootcamp, with a Bachelors in Fine arts looking for a place to grow his skills. I love that coding feeds my creative side and the need for a challenge.</p>
 
-                    <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio.
-                        Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
+                    <p>I am currently the lab/social media manager at Denver Pro Photo. There, my responsibilities include, but are not limited to providing high-quality lab services, managing the store’s website, and fostering business by creating sales and mass email campaigns to bring customers into the store. I currently have an open rate averaging around 30%, above the industry average.</p>
 
-                    <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh
-                        tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-                        mus.</p>
+                    <p>My attention to detail and dedication to providing customers with the best quality services has led the company to increase sales, not just the lab but across the board.
+                        One of my favorite projects to bring attention to Denver Pro Photo was organizing an online photo contest. I was able to get our supply dealers to sponsor the contest and provide prizes.
+                        </p>
+                    <p>
+                        As I transition from my career in photography into a career in coding, I am looking for a company that will help me grow my skills as a web developer, but that will also value my past experience in the art world.
+                    </p>  
+                    <p><a href="github.com/MattRoger">Check out My Github Page</a></p>  
                 </div>
 
             </div>
@@ -58,8 +59,10 @@
 
 </body>
 <footer>
-    <div class="container">
-        &copy Matt Roger
+    <div class="footer-container">
+        <p>&copy Matt Roger</p>
+        <a href="https://github.com/MattRoger">Matt's GitHub</a>
+        <a href="https://www.linkedin.com/in/matt-roger/">LinkedIn</a>
     </div>
 </footer>
 
