--- a/portfolio.html
+++ b/portfolio.html
@@ -45,6 +45,7 @@
                         <h3 class="portfolio-text">Psychic Game</h3>
                     </a>
                 </div>
+
                 <div class="portfolio-item">
                     <img class="portfolio-image" src="assets/img/crystalgame.png">
                     <div class="portfolio-description">
@@ -59,6 +60,7 @@
                         <h3 class="portfolio-text">Kalaxian Crystals</h3>
                     </a>
                 </div>
+
                 <div class="portfolio-item">
                     <img class="portfolio-image" src="assets/img/giphygen.PNG">
                     <div class="portfolio-description">
@@ -72,6 +74,7 @@
                         <h3 class="portfolio-text">Giphy Generator</h3>
                     </a>
                 </div>
+
                 <div class="portfolio-item">
                     <img class="portfolio-image" src="assets/img/worldwatcher.PNG">
                     <div class="portfolio-description">
@@ -85,6 +88,7 @@
                         <h3 class="portfolio-text">The World Watcher</h3>
                     </a>
                 </div>
+
                 <div class="portfolio-item">
                     <img class="portfolio-image" src="assets/img/liri.PNG">
                     <div class="portfolio-description">
@@ -98,6 +102,7 @@
                         <h3 class="portfolio-text">Liri Bot</h3>
                     </a>
                 </div>
+
                 <div class="portfolio-item">
                     <img class="portfolio-image" src="assets/img/starwarstrivia.PNG">
                     <div class="portfolio-description">
@@ -124,6 +129,7 @@
                         <h3 class="portfolio-text">Burger Orm</h3>
                     </a>
                 </div>
+
                 <div class="portfolio-item">
                     <img class="portfolio-image" src="assets/img/spoileralert.PNG">
                     <div class="portfolio-description">
@@ -137,6 +143,7 @@
                         <h3 class="portfolio-text">Spoiler Alert</h3>
                     </a>
                 </div>
+
                 <div class="portfolio-item">
                     <img class="portfolio-image" src="assets/img/friendfinder.PNG">
                     <div class="portfolio-description">
@@ -149,6 +156,7 @@
                         <h3 class="portfolio-text">Sci-fi Friend Finder</h3>
                     </a>
                 </div>
+
                 <div class="portfolio-item">
                     <img class="portfolio-image" src="assets/img/clickygame.PNG">
                     <div class="portfolio-description">
@@ -161,6 +169,7 @@
                         <h3 class="portfolio-text">Colorado Wildlife Clicky Game</h3>
                     </a>
                 </div>
+
                 <div class="portfolio-item">
                     <img class="portfolio-image" src="assets/img/zombies.PNG">
                     <div class="portfolio-description">
@@ -169,7 +178,7 @@
                             A educational game built with react
                         </p>
                     </div>
-                    <a href="https://clickygame9999.herokuapp.com/">
+                    <a href="https://lit-crag-22298.herokuapp.com/">
                         <h3 class="portfolio-text">Zombies Need Brains</h3>
                     </a>
                 </div>
@@ -181,8 +190,10 @@
 
 </body>
 <footer>
-    <div class="container">
-        &copy Matt Roger
+    <div class="footer-container">
+        <p>&copy Matt Roger</p>
+        <a href="https://github.com/MattRoger">Matt's GitHub</a>
+        <a href="https://www.linkedin.com/in/matt-roger/">LinkedIn</a>
     </div>
 </footer>
 
