--- a/mailchimp.html
+++ b/mailchimp.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,20 +8,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/mailchimp.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700|Permanent+Marker&display=swap"
         rel="stylesheet">
-    <title>Contact Matt Roger</title>
+    <title>About Matt Roger</title>
 </head>
-
 <body>
     <header id="masthead">
         <div class="container clearfix">
             <div class="name-title">
-
                 <a href="index.html" id="logo" class="name">Matt Roger</a>
                 <a href="index.html" id="logo" class="jtitle">Web Developer</a>
-
             </div>
             <nav>
                 <a href="about.html">About</a>
@@ -32,24 +31,37 @@
 
     <div class="main-wrapper">
         <section class="main-section">
-            <h2>Contact Matt</h2>
-            <div class="inner-section contact">
-                <form
-                action="https://formspree.io/xoqjqqze"
-                method="POST"
-                >
-                    <label for="email">Email</label>
-                    <input type="text" id="email" name="_replyto" placeholder="Enter your Email">
+            <h2>Working With MailChimp</h2>
+            <div class="inner-section about">
+                <div class="photo-history">
 
-                    <label for="email">Name</label>
-                    <input type="text" id="email" name="name" placeholder="name">
+                    <div class="chimp-item">
+                        <img class="chimp-img" src="assets/img/mailchimp/whjackson.PNG">
+                        <h3>W.H. Jackson, A Pioneer In Wester Photography</h3>
+                    </div>
 
-                    <label for="message">Your Message</label>
-                    <textarea id="message" name="subject" placeholder="Your message here..."></textarea>
-                    <input type="submit" value="submit">
+                    <div class="chimp-item">
+                        <img class="chimp-img" src="assets/img/mailchimp/blackhistory.PNG">
+                        <h3>Four African-American Photographers You Should Know</h3>
+                    </div>
 
-                </form>
+                    <div class="chimp-item">
+                        <img class="chimp-img" src="assets/img/mailchimp/women.PNG">
+                        <h3>Five Women Who Changed Photography</h3>
+                    </div>
 
+                </div>
+                
+                <div class="howTo">
+                    <div class="chimp-item">
+                        <img class="chimp-img" src="assets/img/mailchimp/whjackson.PNG">
+                        <h3>W.H. Jackson, A Pioneer In Wester Photography</h3>
+                    </div>
+
+                </div>
+               
+
+            </div>
 
         </section>
 
