added mailchimp page to profile

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,20 @@
         <section class="main-section">
             <h2>Matt's Portfolio</h2>
             <div class="inner-section portfolio">
+
+                <div class="portfolio-item">
+                    <img class="portfolio-image" src="assets/img/MailChimp-1.jpg">
+                    <div class="portfolio-description">
+                        <h4>MailChimp</h4>
+                        <p>
+                            Marketing With MailChimp to promote and increase sales for a small business.
+                        </p>
+                    </div>
+                    <a href="/mailchimp.html">
+                        <h3 class="portfolio-text">MailChimp Campaigns</h3>
+                    </a>
+                </div>
+
                 <div class="portfolio-item">
                     <img class="portfolio-image" src="assets/img/pyschicgame.PNG">
                     <div class="portfolio-description">
@@ -182,6 +196,8 @@
                         <h3 class="portfolio-text">Zombies Need Brains</h3>
                     </a>
                 </div>
+
+   
 
             </div>
         </section>
