--- a/mailchimp.html
+++ b/mailchimp.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,8 +11,9 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700|Permanent+Marker&display=swap"
         rel="stylesheet">
-    <title>About Matt Roger</title>
+    <title>Success With MailChimp</title>
 </head>
+
 <body>
     <header id="masthead">
         <div class="container clearfix">
@@ -31,35 +31,81 @@
 
     <div class="main-wrapper">
         <section class="main-section">
-            <h2>Working With MailChimp</h2>
-            <div class="inner-section about">
+            <h2>Success With MailChimp</h2>
+            <div class="inner-section mailchimp">
+                <h2 class="chimp-title">Photographic History</h2>
                 <div class="photo-history">
-
                     <div class="chimp-item">
-                        <img class="chimp-img" src="assets/img/mailchimp/whjackson.PNG">
-                        <h3>W.H. Jackson, A Pioneer In Wester Photography</h3>
+                        <a href="https://mailchi.mp/denverprophoto/w-h-jackson-pioneer-in-western-photography">
+                            <h3>W.H. Jackson, A Pioneer In Western Photography</h3>
+                            <img class="chimp-img" src="assets/img/mailchimp/whjackson.PNG">
+                        </a>
                     </div>
 
                     <div class="chimp-item">
-                        <img class="chimp-img" src="assets/img/mailchimp/blackhistory.PNG">
-                        <h3>Four African-American Photographers You Should Know</h3>
+                        <a href="https://us14.campaign-archive.com/?u=489e748ae6cf06e473449b3da&id=1ef8e207f2">
+                            <h3>Four African-American Photographers You Should Know</h3>
+                            <img class="chimp-img" src="assets/img/mailchimp/blackhistory.PNG">
+                        </a>
                     </div>
 
                     <div class="chimp-item">
-                        <img class="chimp-img" src="assets/img/mailchimp/women.PNG">
-                        <h3>Five Women Who Changed Photography</h3>
+                        <a href="https://mailchi.mp/denverprophoto/5-women-who-forever-changed-photography">
+                            <h3>Five Women Who Changed Photography</h3>
+                            <img class="chimp-img" src="assets/img/mailchimp/women.PNG">
+                        </a>
                     </div>
 
                 </div>
-                
+
+                <h2 class="chimp-title">How-To Guides</h2>
                 <div class="howTo">
                     <div class="chimp-item">
-                        <img class="chimp-img" src="assets/img/mailchimp/whjackson.PNG">
-                        <h3>W.H. Jackson, A Pioneer In Wester Photography</h3>
+                        <a href="https://mailchi.mp/denverprophoto/understanding-histograms">
+                            <h3>Understanding Histograms</h3>
+                            <img class="chimp-img" src="assets/img/mailchimp/histograms.PNG">
+                        </a>
+                    </div>
+
+                    <div class="chimp-item">
+                        <a href="https://us14.campaign-archive.com/?u=489e748ae6cf06e473449b3da&id=1e0d658d0d">
+                            <h3>How To Make A Watermark</h3>
+                            <img class="chimp-img" src="assets/img/mailchimp/watermarks.PNG">
+                        </a>
+                    </div>
+                    <div class="chimp-item">
+                        <a href="https://mailchi.mp/denverprophoto/learn-to-how-to-colorize-old-bw-photos">
+                            <h3>How To Color Black & White Photos</h3>
+                            <img class="chimp-img" src="assets/img/mailchimp/color.PNG">
+                        </a>
                     </div>
 
                 </div>
-               
+
+                <h2 class="chimp-title">Sales</h2>
+                <div class="sales">
+                    <div class="chimp-item">
+                        <a href="https://us14.admin.mailchimp.com/campaigns/show?id=404901">
+                            <h3>Toy Camera's</h3>
+                            <img class="chimp-img" src="assets/img/mailchimp/toycamera.PNG">
+                        </a>
+                    </div>
+
+                    <div class="chimp-item">
+                        <a href="https://us14.admin.mailchimp.com/campaigns/show?id=713644">
+                            <h3>New Benro Products</h3>
+                            <img class="chimp-img" src="assets/img/mailchimp/benro.PNG">
+                        </a>
+                    </div>
+                    <div class="chimp-item">
+                        <a href="https://us14.admin.mailchimp.com/campaigns/show?id=404997">
+                            <h3>Product Sale</h3>
+                            <img class="chimp-img" src="assets/img/mailchimp/sale.PNG">
+                        </a>
+                    </div>
+
+                </div>
+
 
             </div>
 
