fixed intro, added contest to mailchimp

--- a/mailchimp.html
+++ b/mailchimp.html
@@ -103,7 +103,28 @@
                             <img class="chimp-img" src="assets/img/mailchimp/sale.PNG">
                         </a>
                     </div>
+                </div>
+                <h2 class="chimp-title">Contest</h2>
+                <div class="sales">
+                    <div class="chimp-item">
+                        <a href="https://mailchi.mp/denverprophoto/show-us-your-best-portrait-404845">
+                            <h3>Portrait Contest</h3>
+                            <img class="chimp-img" src="assets/img/mailchimp/portaitcontest.PNG">
+                        </a>
+                    </div>
 
+                    <div class="chimp-item">
+                        <a href="https://mailchi.mp/denverprophoto/dppanimalphotographycontest">
+                            <h3>Animal Contest</h3>
+                            <img class="chimp-img" src="assets/img/mailchimp/animalcontest.PNG">
+                        </a>
+                    </div>
+                    <div class="chimp-item">
+                        <a href="https://us14.campaign-archive.com/?u=489e748ae6cf06e473449b3da&id=2bf482223b">
+                            <h3>High School Contest</h3>
+                            <img class="chimp-img" src="assets/img/mailchimp/hscontest.PNG">
+                        </a>
+                    </div>
                 </div>
 
 
