--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
                             Marketing With MailChimp to promote and increase sales for a small business.
                         </p>
                     </div>
-                    <a href="/mailchimp.html">
+                    <a href="mailchimp.html">
                         <h3 class="portfolio-text">MailChimp Campaigns</h3>
                     </a>
                 </div>
