--- a/index.html
+++ b/index.html
@@ -15,17 +15,22 @@
 </head>
 
 <body>
-    <div class="enterSite">
-        <a href="about.html"> Enter Site</a>
-    </div>
-    <div class="opening">
-    </div>
-    <div class="logo scale-out-center"></div>
-    <section class="star-wars">
-        <div class="crawl">
-            <div class="title"></div>
+    <div class="intro-wrapper">
+        <div class="enterSite">
+            <a href="about.html"> Enter Site</a>
         </div>
-    </section>
+        <div class="opening">
+        </div>
+        <div class="logo scale-out-center"></div>
+        <section class="star-wars">
+            <div class="crawl">
+                <div class="title"></div>
+            </div>
+        </section>
+        <audio id="intro-music">
+            <source src="assets/audio/star_wars_theme.mp3" type="audio/mpeg">
+    </audio>
+    </div>
 
 </body>
 
