--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 
 <body>
     <div class="intro-wrapper">
-        <div class="enterSite">
-            <a href="about.html"> Enter Site</a>
-        </div>
+        <a href="about.html" class="enterSite">
+        <span class="fill" >
+            Enter Site
+        </span>
+    </a>
         <div class="opening">
         </div>
         <div class="logo scale-out-center"></div>
