something is very wrong

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="intro-wrapper">
-        <a href="about.html" class="enterSite">
+        <a href="about.html">
         <span class="fill" >
             Enter Site
         </span>
