--- a/about.html
+++ b/about.html
@@ -9,14 +9,16 @@
 
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/grid.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/about.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/header.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700|Permanent+Marker&display=swap"
         rel="stylesheet">
     <title>About Matt Roger</title>
 </head>
 <body>
     <header id="masthead">
-        <div class="container clearfix">
+        <div class="headerContainer">
             <div class="name-title">
                 <a href="index.html" id="logo" class="name">Matt Roger</a>
                 <a href="index.html" id="logo" class="jtitle">Web Developer</a>
@@ -29,11 +31,10 @@
         </div>
     </header>
 
-    <div class="main-wrapper">
+    
         <section class="main-section">
             <h2>About Matt</h2>
             <div class="inner-section about">
-
                 <img src="assets/img/portfoliosm.jpg" class="profile-image" alt="Matt Roger">
                 <div class="about-text">
 
@@ -47,16 +48,10 @@
                     <p>
                         As I transition from my career in photography into a career in coding, I am looking for a company that will help me grow my skills as a web developer, but that will also value my past experience in the art world.
                     </p>  
-                    <p><a href="github.com/MattRoger">Check out My Github Page</a></p>  
+                    <p><a href="github.com/MattRoger" class="goldText">Check out My Github Page</a></p>  
                 </div>
-
             </div>
-
-        </section>
-
-
-    </div>
-
+        </section>  
 </body>
 <footer>
     <div class="footer-container">
